--- a/Media.Player/Media.Player.csproj
+++ b/Media.Player/Media.Player.csproj
@@ -14,4 +14,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\media\audio\" />
+    <Folder Include="wwwroot\media\video\" />
+  </ItemGroup>
+
 </Project>
