--- a/Media.Player/Media.Player.csproj
+++ b/Media.Player/Media.Player.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
-    <PackageReference Include="WindowsAzure.MediaServices" Version="4.1.0.1" />
-    <PackageReference Include="windowsazure.mediaservices.extensions" Version="4.1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\media\audio\" />
+    <Folder Include="wwwroot\media\art\" />
     <Folder Include="wwwroot\media\video\" />
   </ItemGroup>
 
