--- a/Media.Player/Media.Player.csproj
+++ b/Media.Player/Media.Player.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180423162656_StoringUrls.cs" />
+    <Compile Remove="Migrations\20180423162656_StoringUrls.Designer.cs" />
+    <Compile Remove="Migrations\20180423172810_StoringExtensionType.cs" />
+    <Compile Remove="Migrations\20180423172810_StoringExtensionType.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
