--- a/Media.Player/Media.Player.csproj
+++ b/Media.Player/Media.Player.csproj
@@ -23,9 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\media\audio\" />
+    <Folder Include="api\" />
     <Folder Include="wwwroot\media\art\" />
-    <Folder Include="wwwroot\media\video\" />
   </ItemGroup>
 
 </Project>
