--- a/Media.Player/Media.Player.csproj
+++ b/Media.Player/Media.Player.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <Folder Include="api\" />
     <Folder Include="wwwroot\media\art\" />
+    <Folder Include="wwwroot\media\uploadfile\" />
   </ItemGroup>
 
 </Project>
